--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,14 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
-.page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+html{
   background-image: var(--bg-page-img);
   background-position: center;
+  background-size: cover;
   background-attachment: fixed;
   background-color: var(--background-color);
-  background-size: cover;
+}
+.page {
+  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+  
   width: 100%;
   font-family: "IBM Plex mono", sans-serif;
   font-weight: 400;
@@ -16,16 +18,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  container-type: inline-size;
+  container-type: inline-size; 
   /* margin: 0;
-  padding: 0; */
+  padding: 0;  */
 }
 
 .header {
   height: 100vh;
   display: grid;
   grid-template-rows: 1fr auto 1fr;
-   container-type: inline-size; 
+  container-type: inline-size; 
   padding: 10px;
 }
 
@@ -326,6 +328,8 @@
 
 .pictures__item {
   width: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 @container(inline-size>=728px) {
@@ -335,7 +339,6 @@
   }
 
   .pictures {
-    display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto auto auto;
     gap: 20px;
@@ -373,8 +376,8 @@
 }
 
 .footer {
-  /* container-type: inline-size; */
-  height: 100svh;
+ container-type: inline-size; 
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
