--- a/styles/style.css
+++ b/styles/style.css
@@ -1,393 +1,379 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-html{
-  background-image: var(--bg-page-img);
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
-  background-color: var(--background-color);
-}
+
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
-  
-  width: 100%;
-  font-family: "IBM Plex mono", sans-serif;
-  font-weight: 400;
-  color: var(--font-color);
-  font-size: 1.125rem;
-  line-height: 23.4px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  container-type: inline-size; 
-  /* margin: 0;
-  padding: 0;  */
+    /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+    background-image: var(--bg-page-img);
+    background-position: center;
+    background-attachment: fixed;
+    background-color: var(--background-color);
+    background-size: cover;
+    width: 100%;
+    font-family: "IBM Plex mono", sans-serif;
+    font-weight: 400;
+    color: var(--font-color);
+    font-size: 1.125rem;
+    line-height: 23.4px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .header {
-  height: 100vh;
-  display: grid;
-  grid-template-rows: 1fr auto 1fr;
-  container-type: inline-size; 
-  padding: 10px;
+    min-block-size: 100svh;
+    display: grid;
+    grid-template-rows: 1fr auto 1fr;
+    padding: 10px;
 }
 
 .header__theme-menu-list {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: end;
-  gap: 13px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: end;
+    gap: 13px;
 }
 
-
-.header.decorated-zone::before,
-.footer.decorated-zone::before {
-  content: '';
-  display: block;
-  width: 25px;
-  height: 25px;
-  border-top: 1px solid var(--border-color);
-  border-right: 1px solid var(--border-color);
-  position: absolute;
-  top: 10px;
-  right: 10px;
+.decorated-zone {
+    position: relative;
 }
 
-.header.decorated-zone::after,
-.footer.decorated-zone::after {
-  content: '';
-  display: block;
-  width: 25px;
-  height: 25px;
-  border-bottom: 1px solid var(--border-color);
-  border-left: 1px solid var(--border-color);
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
+.decorated-zone::before {
+    content: '';
+    display: block;
+    width: 25px;
+    height: 25px;
+    border-top: 1px solid var(--border-color);
+    border-right: 1px solid var(--border-color);
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.decorated-zone::after {
+    content: '';
+    display: block;
+    width: 25px;
+    height: 25px;
+    border-bottom: 1px solid var(--border-color);
+    border-left: 1px solid var(--border-color);
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
 }
 
 .decoration-element {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  color: var(--bg-accent-color);
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: var(--bg-accent-color);
 }
 
 .decoration-element::after {
-  content: "";
-  display: inline-block;
-  width: 9px;
-  height: 9px;
-  margin-inline: 10px;
-  background-color: var(--bg-accent-color);
-  border-radius: 50%;
- box-shadow: 0px 0px 50px var(--bg-accent-color); 
+    content: "";
+    display: inline-block;
+    width: 9px;
+    height: 9px;
+    margin-inline-end: 10px;
+    background-color: var(--bg-accent-color);
+    border-radius: 50%;
+    box-shadow: 0px 0px 50px var(--bg-accent-color);
 
 }
 
-@container (inline-size>=728px) {
-  .header {
-    padding: 20px;
-  }
+@media (width >= 768px) {
+    .header {
+        padding: 20px;
+    }
 
-  .header.decorated-zone::before,
-  .footer.decorated-zone::before {
-    top: 20px;
-    right: 20px;
-  }
+    .decorated-zone::before {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
 
-  .header.decorated-zone::after,
-  .footer.decorated-zone::after {
-    bottom: 20px;
-    left: 20px;
-  }
+    .decorated-zone::after {
+        position: absolute;
+        bottom: 20px;
+        left: 20px;
+    }
 
-  .decoration-element {
-    top: 20px;
-    right: 20px;
-  }
+    .decoration-element {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
 }
 
-@container (inline-size>=984px) {
-  .header__theme-menu-list {
-    flex-direction: row;
-    align-items: start;
-  }
+@media (width >= 1024px) {
+    .header__theme-menu-list {
+        flex-direction: row;
+        align-items: start;
+    }
 }
 
 .header__theme-menu-button {
-  border: none;
-  background-color: transparent;
-  color: var(--button-text-color);
-  font-size: 1.125rem;
-  padding-inline-start: 13px;
-  padding-inline-end: 13px;
+    width: 70px;
+    border: none;
+    background-color: transparent;
+    color: var(--button-text-color);
+    font-size: 1.125rem;
+    padding-inline-start: 13px;
+    padding-inline-end: 13px;
+    cursor: pointer;
 }
 
 .header__theme-menu-button:hover {
-  outline-offset: 1px;
-  outline: 1px solid var(--border-color-hover);
-  cursor: pointer;
+    outline-offset: 1px;
+    outline: 1px solid var(--border-color-hover);
 }
 
 .header__theme-menu-button_active {
-   outline: 1px solid var(--border-color); 
-  pointer-events: none;
+    outline: 1px solid var(--border-color);
+    pointer-events: none;
+    cursor: default;
 }
 
 .header__theme-menu-button:focus {
-  outline: none;
+    appearance: none;
 }
 
 .header__theme-menu-button:focus-visible {
-  outline-offset: 5px;
-  border-block-end: 1px solid var(--border-color);
+    outline-offset: 5px;
+    border-block-end: 1px solid var(--border-color);
 }
 
 .title {
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
-  line-height: 83%;
-  color: var(--font-color-title);
-  text-shadow:4px 4px 0px var(--text-shadow-title);
-  font-weight: 700;
-}
-
-.footer .title{
-  text-shadow:2px 2px 0px var(--text-shadow-title);
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    line-height: 83%;
+    color: var(--font-color-title);
+    text-shadow: var(--text-shadow-title);
+    font-weight: 700;
 }
 
 .wapper-for-discription {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: end;
-  width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: end;
+    width: 100%;
 }
 
 .description {
-  color: var(--font-color-description);
-  font-size: 1.125rem;
-  background-color: var(--bg-accent-color);
-  font-weight: 700;
+    color: var(--font-color-description);
+    font-size: 1.125rem;
+    background-color: var(--bg-accent-color);
+    font-weight: 700;
 }
 
-@container(inline-size>=728px) {
-  .title {
-    font-size: clamp(7.5rem, 0.5262rem + 14.5098vw, 9.8125rem);
-  }
+@media (width >= 768px) {
+    .title {
+        font-size: clamp(7.5rem, 0.5262rem + 14.5098vw, 9.8125rem);
+    }
 
-  .header .title {
-    margin-inline-start: -20px;
-  }
+    .header .title {
+        margin-inline-start: -20px;
+    }
 
-  .description {
-    width: 50%;
-  }
+    .description {
+        width: 50%;
+    }
 }
-
 
 
 .main {
-  padding-inline: 10px;
+    padding-inline: 10px;
 }
 
 .constant-layout {
-  display: grid;
-  grid-template-columns: 1fr;
-  margin-block-start: 40px;
-  margin-block-end: 50px;
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-block-start: 40px;
+    margin-block-end: 50px;
 }
 
 .question {
-  color: var(--font-color-question);
-  font-size: 1.125rem;
-  font-weight: 700;
+    color: var(--font-color-question);
+    font-size: 1.125rem;
+    font-weight: 700;
 }
 
 .main__point {
-  color: var(--font-color-description);
-  font-size: 1.125rem;
-  font-weight: 700;
-  background-color: var(--bg-accent-color);
-  margin-block-start: 20px;
-  margin-block-end: 10px;
+    color: var(--font-color-description);
+    font-size: 1.125rem;
+    font-weight: 700;
+    background-color: var(--bg-accent-color);
+    margin-block-start: 20px;
+    margin-block-end: 10px;
 }
 
 .text:not(:last-of-type) {
-  color: var(--font-color);
-  margin-block-end: 20px;
+    color: var(--font-color);
+    margin-block-end: 20px;
 }
 
 .link {
-  text-shadow: 2px 2px var(--bg-accent-color);
-  text-decoration: none;
+    text-shadow: 2px 2px var(--bg-accent-color);
+    text-decoration: none;
 }
 
 .link:hover {
-  border-block-end: 1px solid var(--font-color);
+    border-block-end: 1px solid var(--font-color);
 }
 
 .link:focus {
-  appearance: none;
+    appearance: none;
 }
 
 .link:focus-visible {
-  outline: 1px solid var(--font-color);
+    outline: 1px solid var(--font-color);
 }
 
-@container(inline-size>=728px) {
-  .main {
-    padding-inline: 20px;
-  }
+@media (width >= 768px) {
+    .main {
+        padding-inline: 20px;
+    }
 
-  .constant-layout {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-template-rows: auto;
-    gap: 20px;
-    margin-block-start: 60px;
-    margin-block-end: 80px;
-  }
+    .constant-layout {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        grid-template-rows: auto;
+        gap: 20px;
+        margin-block-start: 60px;
+        margin-block-end: 80px;
+    }
 
-  .main__point {
-    margin-block-start: 0;
-  }
-}
-
-@container(inline-size>=980px) {
-  .constant-layout {
-    gap: 10px;
-  }
+    .main__point {
+        margin-block-start: 0;
+    }
 }
 
 .changable-layout {
-  display: grid;
-  grid-template-columns: 1fr;
-  margin-block-end: 50px;
+    display: grid;
+    grid-template-columns: 1fr;
+    margin-block-end: 50px;
 }
 
-@container(inline-size>=728px) {
-  .changable-layout {
-    grid-template-rows: auto 1fr;
-    gap: 20px;
-    margin-block-end: 80px;
-  }
+@media (width >= 768px) {
+    .changable-layout {
+        display: grid;
+        grid-template-rows: auto 1fr;
+        gap: 20px;
+        margin-block-end: 80px;
+    }
 
-  .question-wraper {
-    width: 30%;
-  }
+    .question-wraper {
+        width: 30%;
+    }
 }
 
-@container(inline-size>=980px) {
-  .changable-layout {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto 1fr;
-  }
+@media (width >= 1024px) {
+    .changable-layout {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: auto 1fr;
+        gap: 20px;
+    }
 
-  .question-wraper {
-    grid-column: 1 / span 3;
-  }
+    .question-wraper {
+        grid-column: 1 / span 3;
+    }
 }
 
 .advise {
-  color: var(--font-color-description);
-  font-size: 1.125rem;
-  font-weight: 700;
-  background-color: var(--bg-accent-color);
-  margin-block-start: 20px;
-  margin-block-end: 10px;
+    color: var(--font-color-description);
+    font-size: 1.125rem;
+    font-weight: 700;
+    background-color: var(--bg-accent-color);
+    margin-block-start: 20px;
+    margin-block-end: 10px;
 }
 
 .normal-text {
-  font-weight: normal;
+    font-weight: normal;
 }
 
-@container(inline-size>=728px) {
-  .advise {
-    margin-block-start: 0;
-    margin-block-end: 20px;
-  }
+@media (width >= 768px) {
+    .advise {
+        margin-block-start: 0;
+        margin-block-end: 20px;
+    }
 }
 
 .question-and-main-point {
-  color: var(--font-color-description);
-  font-size: 1.125rem;
-  font-weight: 700;
-  background-color: var(--bg-accent-color);
-  margin-block-start: 50px;
-  margin-block-end: 10px;
+    color: var(--font-color-description);
+    font-size: 1.125rem;
+    font-weight: 700;
+    background-color: var(--bg-accent-color);
+    margin-block-start: 50px;
+    margin-block-end: 10px;
 }
 
 .pictures {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 10px;
-  margin-block-end: 40px;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 10px;
+    margin-block-end: 40px;
 }
 
 .pictures__item {
-  width: 100%;
-  object-fit: cover;
-  object-position: center;
+    width: 100%;
 }
 
-@container(inline-size>=728px) {
-  .question-and-main-point {
-    margin-block-start: 80px;
-    margin-block-end: 20px;
-  }
+@media (width >= 768px) {
+    .question-and-main-point {
+        margin-block-start: 80px;
+        margin-block-end: 20px;
+    }
 
-  .pictures {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto auto auto;
-    gap: 20px;
-    margin-block-end: 60px;
-  }
+    .pictures {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: auto auto auto;
+        gap: 20px;
+        margin-block-end: 60px;
+    }
 
-  .pictures__item:nth-child(1) {
-    grid-column: 1/span 2;
-  }
+    .pictures__item-vertical {
+        grid-row: span 2;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 
-  .pictures__item:nth-child(2) {
-    grid-column: 3;
-    grid-row: span 2;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+    .pictures__item:nth-child(1) {
+        grid-column: 1/span 2;
+    }
 
-  .pictures__item:nth-child(3) {
-    grid-column: 1;
-    grid-row: span 2;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+    .pictures__item:nth-child(2) {
+        grid-column: 3;
+    }
 
-  .pictures__item:nth-child(4) {
-    grid-column: 2;
-    grid-row: 2;
-  }
+    .pictures__item:nth-child(3) {
+        grid-column: 1;
+    }
 
-  .pictures__item:nth-child(5) {
-    grid-column: 2/span 2;
-  }
+    .pictures__item:nth-child(4) {
+        grid-column: 2;
+        grid-row: 2;
+    }
+
+    .pictures__item:nth-child(5) {
+        grid-column: 2/span 2;
+    }
 }
 
 .footer {
- container-type: inline-size; 
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 10px;
+    min-block-size: 100svh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
 }
 
 
-@container(inline-size>=728px) {
-  .footer {
-    padding: 20px;
-  }
+@media (width >= 768px) {
+    .footer {
+        padding: 20px;
+    }
 }
