--- a/styles/variables.css
+++ b/styles/variables.css
@@ -7,7 +7,7 @@
   --font-color-description: #353430;
   --font-color-question: #353430;
   --bg-page-img: url(../images/cover-image-light.png);
-  --background-color: #FFC2E6;
+  --background-color: #FFF1F7;
   --bg-accent-color: #FF8DCB;
   --button-text-color: #353430;
 
